[package]
name = "kernel"
version = "0.1.0"
authors = ["gavadinov@gmail.com <gavadinov@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.6.0"
volatile = "0.2.6"
spin = "0.5.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
# This target is used if no `--target` is passed
default-target = "x86_64-kernel-target.json"

# The command invoked with the created bootimage (the "{}" will be replaced
# with the path to the bootable disk image)
# Applies to `bootimage run` and `bootimage runner`
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
